Minor tweak with the judge screen.  Still fighting media

--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -4451,29 +4451,6 @@ div.pagecolumns:after {
 	border-bottom    : 1px solid var(--medium-gray);
 }
 
-@media only screen and (min-width : 900px) {
-	.sidenote .pagehalf {
-		width         : 48%;
-	}
-	.pagehalf  {
-		width         : 49%;
-		padding-left  : 0;
-		padding-right : .25%;
-		margin        : 0;
-	}
-}
-
-@media only screen and (min-width : 1160px) {
-	.sidenote .pagehalf {
-		width         : 48%;
-	}
-	.pagehalf  {
-		width         : 49%;
-		padding-left  : 0;
-		padding-right : .25%;
-		margin        : 0;
-	}
-}
 
 .pagehalf h5 {
 	padding-top: 8px;
@@ -6725,308 +6702,6 @@ p.reason {
 	line-height  : 9pt;
 }
 
-@media only screen and (min-width : 878px) and (max-width : 1114px) {
-
-	h2 {
-		font-size: 2.2em;
-	}
-	h4 {
-		font-size: 1.8em;
-	}
-	h5 {
-		font-size: 1.6em;
-	}
-
-	.pagehalf {
-		flex-basis : 99.5%;
-		min-width  : 97%;
-		margin-top : 8px;
-	}
-
-	#header {
-		width     : 99%;
-		margin    : auto;
-		padding   : 0;
-		min-width : 0;
-		max-width : 11536px;
-	}
-
-	#logo {
-		display      : inline-block;
-		width        : 22%;
-		margin       : 0;
-		padding      : 0;
-		padding-left : 32px;
-	}
-
-	#logo a {
-		margin         : 0;
-		padding        : 0;
-	}
-
-	#logo a img {
-		display    : inline;
-		max-width  : 100%;
-		max-height : 100%;
-	}
-
-	.tabad_carousel {
-		float            : left;
-		width            : 71%;
-		background-color : var(--neutral-gray);
-		padding          : 0;
-		margin           : 0;
-		max-height       : 104px;
-	}
-
-	.tabad_full {
-		float      : none;
-		text-align : center;
-		max-width  : 100%;
-	}
-
-	.main {
-		min-height       : 600px;
-		width            : 69%;
-		padding-bottom   : 42px;
-		background-color : var(--background-white);
-		padding          : 1%;
-		float            : left;
-	}
-
-	.mainfull {
-		float : none;
-		width : 97%;
-	}
-
-	#content {
-		display          : block;
-		position         : relative;
-		color            : black;
-		background-color : var(--lightest-cool-gray);
-		margin           : 0;
-		padding          : 0;
-	}
-
-	.main {
-		min-height       : 600px;
-		width            : 69%;
-		padding-bottom   : 42px;
-		background-color : var(--background-white);
-		padding          : 1%;
-		float            : left;
-	}
-
-	.mainfull {
-		float : none;
-		width : 96%;
-	}
-
-	.menu {
-		width : 28%;
-		float : right;
-		padding: .5%;
-	}
-
-
-
-	.menu {
-		width : 28%;
-		float : right;
-		padding: .5%;
-	}
-
-	#wrapper {
-		width      : 99%;
-		min-width  : 680px;
-		padding    : 0;
-	}
-
-	#toprow {
-		display        : block;
-		min-width      : 512px;
-		width          : 61%;
-		float          : right;
-		text-align     : right;
-		padding-top    : 4px;
-		padding-bottom : 4px;
-		letter-spacing : .2px;
-		margin         : 0;
-	}
-
-	#menus {
-		display    : block;
-		width      : 100%;
-		text-align : center;
-		margin     : 0;
-		padding    : 0;
-	}
-
-	#nav {
-		display     : inline-block;
-		float       : none;
-		margin      : auto;
-		list-style  : none;
-		z-index     : 500;
-		font-size   : 10pt;
-		padding-top : 18px;
-	}
-
-}
-
-@media only screen and (max-width : 877px) {
-
-	h2 {
-		font-size: 2.0em;
-	}
-	h4 {
-		font-size: 1.6em;
-	}
-	h5 {
-		font-size: 1.4em;
-	}
-
-	.pagehalf {
-		flex-basis : 99.5%;
-		min-width  : 97%;
-		margin-top : 8px;
-	}
-
-	#header {
-		width     : 99%;
-		margin    : auto;
-		padding   : 0;
-		min-width : 0;
-		max-width : 11536px;
-	}
-
-	#logo {
-		display      : inline-block;
-		width        : 22%;
-		margin       : 0;
-		padding      : 0;
-		padding-left : 32px;
-	}
-
-	#logo a {
-		margin         : 0;
-		padding        : 0;
-	}
-
-	#logo a img {
-		display    : inline;
-		max-width  : 100%;
-		max-height : 100%;
-	}
-
-	.tabad_carousel {
-		float            : left;
-		width            : 67%;
-		background-color : var(--neutral--gray);
-		padding-left     : 2%;
-		padding-right    : 2%;
-		margin           : 0;
-		height           : 104px;
-	}
-
-	.tabad_full {
-		width : 94%;
-	}
-
-	#content {
-		display          : block;
-		position         : relative;
-		color            : black;
-		background-color : var(--lightest-cool-gray);
-		margin           : 0;
-		padding          : 0;
-	}
-
-	.main {
-		min-height       : 600px;
-		width            : 69%;
-		padding-bottom   : 42px;
-		background-color : var(--background-white);
-		padding          : 1%;
-		float            : left;
-	}
-
-	.mainfull {
-		float : none;
-		width : 96%;
-	}
-
-	.menu {
-		width : 28%;
-		float : right;
-		padding: .5%;
-	}
-
-	#wrapper {
-		width      : 99%;
-		min-width  : 680px;
-		padding    : 0;
-	}
-
-	#menus {
-		display    : block;
-		width      : 100%;
-		text-align : center;
-		margin     : 0;
-		padding    : 0;
-	}
-
-	#nav {
-		display     : inline-block;
-		float       : none;
-		margin      : auto;
-		list-style  : none;
-		z-index     : 500;
-		font-size   : 10pt;
-		padding-top : 18px;
-	}
-
-	#toprow {
-		display        : block;
-		min-width      : 0;
-		width          : 64%;
-		float          : right;
-		text-align     : right;
-		padding-top    : 4px;
-		padding-bottom : 4px;
-		letter-spacing : .2px;
-		margin         : 0;
-		white-space    : nowrap;
-		overflow       : hidden;
-	}
-
-	#toprow a {
-		display         : inline-block;
-		border-left     : 2px solid rgba(255, 255, 255, 0.14);
-		color           : rgba(255, 255, 255, 0.64);
-		margin-top      : 4px;
-		padding-left    : 4px;
-		padding-right   : 4px;
-		padding-top     : 8px;
-		padding-bottom  : 8px;
-		text-decoration : none;
-		font-size       : 12px;
-		font-weight     : 700;
-	}
-
-	#toprow a.fa {
-		font-size: 16px;
-	}
-
-	#toprow #helpbutton a {
-		font-size   : 1.4em;
-		margin      : 0;
-		padding     : 4px;
-		height      : auto;
-		width       : auto;
-		border-left : none;
-	}
-}
 
 /* Select2 Select Menus */
 
@@ -7520,3 +7195,327 @@ span.halffixedflex,
 	margin-right : 0px;
 	line-height  : normal;
 }
+
+// Medium laptop and tablet screens
+@media screen (max-width : 1114px) {
+
+	h2 {
+		font-size: 2.2em;
+	}
+	h4 {
+		font-size: 18em !important;
+	}
+	h5 {
+		font-size: 1.6em;
+	}
+
+	.splitpage .pagehalf,
+	.pagehalf {
+		width      : 100%;
+		flex-basis : 99.5%;
+		min-width  : 97%;
+		margin-top : 8px;
+	}
+
+	table {
+		table-layout : fixed;
+		width        : 100%;
+	}
+
+	#header {
+		width     : 99%;
+		margin    : auto;
+		padding   : 0;
+		min-width : 0;
+		max-width : 11536px;
+	}
+
+	#logo {
+		display      : inline-block;
+		width        : 22%;
+		margin       : 0;
+		padding      : 0;
+		padding-left : 32px;
+	}
+
+	#logo a {
+		margin         : 0;
+		padding        : 0;
+	}
+
+	#logo a img {
+		display    : inline;
+		max-width  : 100%;
+		max-height : 100%;
+	}
+
+	.tabad_carousel {
+		float            : left;
+		width            : 71%;
+		background-color : var(--neutral-gray);
+		padding          : 0;
+		margin           : 0;
+		max-height       : 104px;
+	}
+
+	.tabad_full {
+		float      : none;
+		text-align : center;
+		max-width  : 100%;
+	}
+
+	.main {
+		min-height       : 600px;
+		width            : 69%;
+		padding-bottom   : 42px;
+		background-color : var(--background-white);
+		padding          : 1%;
+		float            : left;
+	}
+
+	.mainfull {
+		float : none;
+		width : 97%;
+	}
+
+	#content {
+		display          : block;
+		position         : relative;
+		color            : black;
+		background-color : var(--lightest-cool-gray);
+		margin           : 0;
+		padding          : 0;
+	}
+
+	.main {
+		min-height       : 600px;
+		width            : 69%;
+		padding-bottom   : 42px;
+		background-color : var(--background-white);
+		padding          : 1%;
+		float            : left;
+	}
+
+	.mainfull {
+		float : none;
+		width : 96%;
+	}
+
+	.menu {
+		width : 28%;
+		float : right;
+		padding: .5%;
+	}
+
+
+
+	.menu {
+		width : 28%;
+		float : right;
+		padding: .5%;
+	}
+
+	#wrapper {
+		width      : 99%;
+		min-width  : 680px;
+		padding    : 0;
+	}
+
+	#toprow {
+		display        : block;
+		min-width      : 512px;
+		width          : 61%;
+		float          : right;
+		text-align     : right;
+		padding-top    : 4px;
+		padding-bottom : 4px;
+		letter-spacing : .2px;
+		margin         : 0;
+	}
+
+	#menus {
+		display    : block;
+		width      : 100%;
+		text-align : center;
+		margin     : 0;
+		padding    : 0;
+	}
+
+	#nav {
+		display     : inline-block;
+		float       : none;
+		margin      : auto;
+		list-style  : none;
+		z-index     : 500;
+		font-size   : 10pt;
+		padding-top : 18px;
+	}
+
+}
+
+
+// Smallest phone screens
+@media screen and (max-width : 877px) {
+
+	h2 {
+		font-size: 2.0em;
+	}
+	h4 {
+		font-size: 1.6em;
+	}
+	h5 {
+		font-size: 1.4em;
+	}
+
+	table {
+		table-layout : fixed;
+		width        : 100%;
+	}
+
+	.splitpage .pagehalf,
+	.pagehalf {
+		width      : 100%;
+		flex-basis : 99.5%;
+		min-width  : 97%;
+		margin-top : 8px;
+	}
+
+	#header {
+		width     : 99%;
+		margin    : auto;
+		padding   : 0;
+		min-width : 0;
+		max-width : 11536px;
+	}
+
+	#logo {
+		display      : inline-block;
+		width        : 22%;
+		margin       : 0;
+		padding      : 0;
+		padding-left : 32px;
+	}
+
+	#logo a {
+		margin         : 0;
+		padding        : 0;
+	}
+
+	#logo a img {
+		display    : inline;
+		max-width  : 100%;
+		max-height : 100%;
+	}
+
+	.tabad_carousel {
+		float            : left;
+		width            : 67%;
+		background-color : var(--neutral--gray);
+		padding-left     : 2%;
+		padding-right    : 2%;
+		margin           : 0;
+		height           : 104px;
+	}
+
+	.tabad_full {
+		width : 94%;
+	}
+
+	#content {
+		display          : block;
+		position         : relative;
+		color            : black;
+		background-color : var(--lightest-cool-gray);
+		margin           : 0;
+		padding          : 0;
+	}
+
+	.main {
+		min-height       : 600px;
+		width            : 69%;
+		padding-bottom   : 42px;
+		background-color : var(--background-white);
+		padding          : 1%;
+		float            : left;
+	}
+
+	.mainfull {
+		float : none;
+		width : 96%;
+	}
+
+	.menu {
+		width : 28%;
+		float : right;
+		padding: .5%;
+	}
+
+	#wrapper {
+		width      : 99%;
+		min-width  : 680px;
+		padding    : 0;
+	}
+
+	#menus {
+		display    : block;
+		width      : 100%;
+		text-align : center;
+		margin     : 0;
+		padding    : 0;
+	}
+
+	#nav {
+		display     : inline-block;
+		float       : none;
+		margin      : auto;
+		list-style  : none;
+		z-index     : 500;
+		font-size   : 10pt;
+		padding-top : 18px;
+	}
+
+	#toprow {
+		display        : block;
+		min-width      : 0;
+		width          : 64%;
+		float          : right;
+		text-align     : right;
+		padding-top    : 4px;
+		padding-bottom : 4px;
+		letter-spacing : .2px;
+		margin         : 0;
+		white-space    : nowrap;
+		overflow       : hidden;
+	}
+
+	#toprow a {
+		display         : inline-block;
+		border-left     : 2px solid rgba(255, 255, 255, 0.14);
+		color           : rgba(255, 255, 255, 0.64);
+		margin-top      : 4px;
+		padding-left    : 4px;
+		padding-right   : 4px;
+		padding-top     : 8px;
+		padding-bottom  : 8px;
+		text-decoration : none;
+		font-size       : 12px;
+		font-weight     : 700;
+	}
+
+	#toprow a.fa {
+		font-size: 16px;
+	}
+
+	#toprow #helpbutton a {
+		font-size   : 1.4em;
+		margin      : 0;
+		padding     : 4px;
+		height      : auto;
+		width       : auto;
+		border-left : none;
+	}
+}
+
+
+
+
