--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -59,6 +59,8 @@
 	--dark-bluegreen : #159090;
 }
 
+
+
 /* Common page layouts */
 
 textarea,
@@ -650,7 +652,7 @@ p {
 	margin-right  : 8px;
 	margin-bottom : 8px;
 	line-height   : 1.4em;
-	font-size     : 1.em;
+	font-size     : 1em;
 }
 
 p.taller {
@@ -688,7 +690,7 @@ ul.bigger li,
 ol.bigger li {
 	margin-top    : 12px;
 	margin-bottom : 12px;
-	line-height   : 1.em;
+	line-height   : 1em;
 }
 
 li {
@@ -1106,7 +1108,7 @@ span.fixedflex,
 }
 
 .fixedflex.rightalign {
-	align-items     : right;
+	align-items     : flex-end;
 }
 
 span.halffixedflex,
@@ -1125,7 +1127,7 @@ span.halffixedflex,
 }
 
 .halffixedflex.rightalign {
-	align-items     : right;
+	align-items     : flex-end;
 }
 
 .judgeheight {
@@ -3301,7 +3303,7 @@ a.buttonwhite.fa-xs,
 	margin      : 1px;
 	padding     : 2px;
 	font-weight : normal;
-	font-size   : -33%;
+	font-size   : 33%;
 }
 
 a.printbutton,
@@ -4385,7 +4387,7 @@ div.pagecolumns:after {
 	clear  : none;
 	content: none;
 	display: none;
-	height : none;
+	height : unset;
 }
 
 .pagecolumns {
@@ -4729,8 +4731,8 @@ div.main span.half.smidge, div.main span span.half.smidge {
 }
 
 .sidenote.larger p {
-	font-size: 10pt;
-	line-height: 16px;
+	font-size   : 10pt;
+	line-height : 16px;
 }
 
 .nearfull, a.nearfull {
@@ -5236,8 +5238,8 @@ a.fa p {
 }
 
 p.huge {
-	line-height: 1.5em;
-	font-size: 140%;
+	line-height : 1.5em;
+	font-size   : 140%;
 }
 
 div.huger,
@@ -5256,7 +5258,7 @@ span.huge span {
 }
 
 p.bigger {
-	line-height: 1.4em;
+	line-height : 1.4em;
 }
 
 .sidenote p.bigger,
@@ -5914,15 +5916,15 @@ td.cellmax{
 .yscroll {
 	height      : 75vh;
 	max-width   : 100%;
-	overflow-x	: none;
+	overflow-x	: hidden;
 	overflow-y	: auto;
 }
 
 .sidenote .yscroll {
-	height      : 65vh;
-	max-width   : 100%;
-	overflow-x	: none;
-	overflow-y	: auto;
+	height     : 65vh;
+	max-width  : 100%;
+	overflow-x : hidden;
+	overflow-y : auto;
 }
 
 .nospace {
@@ -6145,7 +6147,7 @@ a.button.padtouchless,
 .judges a,
 .judges div,
 .judges span  {
-	line-height : auto;
+	line-height : normal;
 	height      : auto;
 }
 
@@ -6570,7 +6572,6 @@ h6.padsetting {
 	right              : 0;
 	bottom             : 0;
 	background-color   : var(--medium-gray);
-	-webkit-transition : .4s;
 	transition         : .4s;
 	text-align         : center;
 	padding            : 0;
@@ -6578,10 +6579,10 @@ h6.padsetting {
 
 .slider:before {
 	position           : absolute;
-	height             : 18px;
+	height             : 20px;
 	width              : 20px;
 	left               : 28px;
-	bottom             : 4px;
+	bottom             : 3px;
 	background-color   : white;
 	-webkit-transition : .4s;
 	transition         : .4s;
@@ -6597,13 +6598,23 @@ h6.padsetting {
 	content    : "Y";
 }
 
+.smaller .slider {
+	height         : 24px;
+	width          : 36px;
+	margin-top     : 0px;
+	margin-bottom  : 0px;
+	padding-top    : 0;
+	padding-bottom : 0;
+}
+
+
 .smaller .slider:before {
-	height    : 16px;
+	height    : 18px;
 	width     : 16px;
 	left      : 16px;
 	bottom    : 3px;
-	font-size : 13px;
-	padding   : none;
+	font-size : 14px;
+	padding   : 0;
 }
 
 .tiny .slider:before {
@@ -6612,7 +6623,7 @@ h6.padsetting {
 	left           : 13px;
 	bottom         : 2px;
 	font-size      : 11px;
-	padding        : none;
+	padding        : 0;
 	padding-bottom : 3px;
 	padding-top    : 0px;
 }
@@ -6843,7 +6854,7 @@ li.select2-results__option {
 
 .row .tox-tinymce,
 .row div.tox-tinymce {
-	align-items : none;
+	align-items : start;
 }
 
 span.noflex,
@@ -6872,7 +6883,7 @@ td.flex,
     margin      : 0;
 }
 .pagehalf .row {
-	width 100%;
+	width: 100%;
 }
 
 span.flexrow.wrap,
@@ -6900,7 +6911,7 @@ td.flex.top,
 }
 
 .flexrow.wrap {
-	flex-wrap : 1;
+	flex-wrap : wrap;
 }
 
 .row span.rightalign,
@@ -6980,7 +6991,7 @@ span.fixedflex,
 }
 
 .fixedflex.rightalign {
-	align-items     : right;
+	align-items     : flex-end;
 }
 
 span.halffixedflex,
@@ -6999,7 +7010,7 @@ span.halffixedflex,
 }
 
 .halffixedflex.rightalign {
-	align-items     : right;
+	align-items     : flex-end;
 }
 
 /* HALF */
@@ -7029,6 +7040,9 @@ span.halffixedflex,
 .flexkids>span,
 .flexkids>div,
 .flexrow {
+
+	padding-left  : 4px;
+	padding-right : 4px;
 
 	.half {
 		width : 50%;
@@ -7098,8 +7112,6 @@ span.halffixedflex,
 		width : 85.7%;
 	}
 
-	/* EIGHTH */
-
 	.eighth {
 		width : 12.5%;
 	}
@@ -7116,7 +7128,6 @@ span.halffixedflex,
 		width : 87.5%;
 	}
 
-	/* TENTH */
 	.tenth {
 		width : 10%
 	}
@@ -7132,8 +7143,6 @@ span.halffixedflex,
 	.ninetenth, .ninetenths {
 		width : 90%;
 	}
-
-	/* RANDOM OTHERS */
 
 	.one {
 		width   : 1%;
@@ -7163,8 +7172,6 @@ span.halffixedflex,
 		padding-right : .25%;
 	}
 
-	padding-left  : 4px;
-	padding-right : 4px;
 }
 
 .cover {
@@ -7196,166 +7203,8 @@ span.halffixedflex,
 	line-height  : normal;
 }
 
-// Medium laptop and tablet screens
-@media screen (max-width : 1114px) {
 
-	h2 {
-		font-size: 2.2em;
-	}
-	h4 {
-		font-size: 18em !important;
-	}
-	h5 {
-		font-size: 1.6em;
-	}
-
-	.splitpage .pagehalf,
-	.pagehalf {
-		width      : 100%;
-		flex-basis : 99.5%;
-		min-width  : 97%;
-		margin-top : 8px;
-	}
-
-	table {
-		table-layout : fixed;
-		width        : 100%;
-	}
-
-	#header {
-		width     : 99%;
-		margin    : auto;
-		padding   : 0;
-		min-width : 0;
-		max-width : 11536px;
-	}
-
-	#logo {
-		display      : inline-block;
-		width        : 22%;
-		margin       : 0;
-		padding      : 0;
-		padding-left : 32px;
-	}
-
-	#logo a {
-		margin         : 0;
-		padding        : 0;
-	}
-
-	#logo a img {
-		display    : inline;
-		max-width  : 100%;
-		max-height : 100%;
-	}
-
-	.tabad_carousel {
-		float            : left;
-		width            : 71%;
-		background-color : var(--neutral-gray);
-		padding          : 0;
-		margin           : 0;
-		max-height       : 104px;
-	}
-
-	.tabad_full {
-		float      : none;
-		text-align : center;
-		max-width  : 100%;
-	}
-
-	.main {
-		min-height       : 600px;
-		width            : 69%;
-		padding-bottom   : 42px;
-		background-color : var(--background-white);
-		padding          : 1%;
-		float            : left;
-	}
-
-	.mainfull {
-		float : none;
-		width : 97%;
-	}
-
-	#content {
-		display          : block;
-		position         : relative;
-		color            : black;
-		background-color : var(--lightest-cool-gray);
-		margin           : 0;
-		padding          : 0;
-	}
-
-	.main {
-		min-height       : 600px;
-		width            : 69%;
-		padding-bottom   : 42px;
-		background-color : var(--background-white);
-		padding          : 1%;
-		float            : left;
-	}
-
-	.mainfull {
-		float : none;
-		width : 96%;
-	}
-
-	.menu {
-		width : 28%;
-		float : right;
-		padding: .5%;
-	}
-
-
-
-	.menu {
-		width : 28%;
-		float : right;
-		padding: .5%;
-	}
-
-	#wrapper {
-		width      : 99%;
-		min-width  : 680px;
-		padding    : 0;
-	}
-
-	#toprow {
-		display        : block;
-		min-width      : 512px;
-		width          : 61%;
-		float          : right;
-		text-align     : right;
-		padding-top    : 4px;
-		padding-bottom : 4px;
-		letter-spacing : .2px;
-		margin         : 0;
-	}
-
-	#menus {
-		display    : block;
-		width      : 100%;
-		text-align : center;
-		margin     : 0;
-		padding    : 0;
-	}
-
-	#nav {
-		display     : inline-block;
-		float       : none;
-		margin      : auto;
-		list-style  : none;
-		z-index     : 500;
-		font-size   : 10pt;
-		padding-top : 18px;
-	}
-
-}
-
-
-// Smallest phone screens
-@media screen and (max-width : 877px) {
+@media only screen and (max-width: 877px) {
 
 	h2 {
 		font-size: 2.0em;
@@ -7516,6 +7365,189 @@ span.halffixedflex,
 	}
 }
 
+@media only screen and (max-width: 1200px) {
 
+	h2 {
+		font-size: 2.2em;
+	}
+	h4 {
+		font-size: 1.8em;
+	}
+	h5 {
+		font-size: 1.6em;
+	}
 
+	.splitpage {
+		flex-wrap: wrap;
+	}
+
+	.splitpage .pagehalf,
+	.pagehalf {
+		width      : 100%;
+		flex-basis : 99.5%;
+		min-width  : 97%;
+		margin-top : 8px;
+	}
+
+	.flexrow .padleft {
+		padding-left: 8px;
+	}
+
+	.flexrow .padright {
+		padding-right: 8px;
+	}
+
+	.pagefull.rightalign .third.centeralign {
+		width: 50%;
+	}
+
+	.sidenote .flexrow a.full,
+	.sidenote a.full,
+	.sidenote .flexrow a.half,
+	.sidenote a.half {
+		margin-top   : 0;
+		padding-left : 4px;
+		width        : 100%;
+	}
+
+	.sidenote .flexrow a.quarter,
+	.sidenote a.quarter,
+	.sidenote .flexrow a.third,
+	.sidenote a.third {
+		margin-top   : 0;
+		padding-left : 4px;
+		width        : 49%;
+	}
+
+	table {
+		width        : 100%;
+	}
+
+	#header {
+		width     : 99%;
+		margin    : auto;
+		padding   : 0;
+		min-width : 0;
+		max-width : 11536px;
+	}
+
+	#logo {
+		display      : inline-block;
+		width        : 22%;
+		margin       : 0;
+		padding      : 0;
+		padding-left : 32px;
+	}
+
+	#logo a {
+		margin         : 0;
+		padding        : 0;
+	}
+
+	#logo a img {
+		display    : inline;
+		max-width  : 100%;
+		max-height : 100%;
+	}
+
+	.tabad_carousel {
+		float            : left;
+		width            : 71%;
+		background-color : var(--neutral-gray);
+		padding          : 0;
+		margin           : 0;
+		max-height       : 104px;
+	}
+
+	.tabad_full {
+		float      : none;
+		text-align : center;
+		max-width  : 100%;
+	}
+
+	.main {
+		min-height       : 600px;
+		width            : 69%;
+		padding-bottom   : 42px;
+		background-color : var(--background-white);
+		padding          : 1%;
+		float            : left;
+	}
+
+	.mainfull {
+		float : none;
+		width : 97%;
+	}
+
+	#content {
+		display          : block;
+		position         : relative;
+		color            : black;
+		background-color : var(--lightest-cool-gray);
+		margin           : 0;
+		padding          : 0;
+	}
+
+	.main {
+		min-height       : 600px;
+		width            : 69%;
+		padding-bottom   : 42px;
+		background-color : var(--background-white);
+		padding          : 1%;
+		float            : left;
+	}
+
+	.mainfull {
+		float : none;
+		width : 96%;
+	}
+
+	.menu {
+		width : 28%;
+		float : right;
+		padding: .5%;
+	}
+
+	.menu {
+		width : 28%;
+		float : right;
+		padding: .5%;
+	}
+
+	#wrapper {
+		width      : 99%;
+		min-width  : 680px;
+		padding    : 0;
+	}
+
+	#toprow {
+		display        : block;
+		min-width      : 512px;
+		width          : 61%;
+		float          : right;
+		text-align     : right;
+		padding-top    : 4px;
+		padding-bottom : 4px;
+		letter-spacing : .2px;
+		margin         : 0;
+	}
+
+	#menus {
+		display    : block;
+		width      : 100%;
+		text-align : center;
+		margin     : 0;
+		padding    : 0;
+	}
+
+	#nav {
+		display     : inline-block;
+		float       : none;
+		margin      : auto;
+		list-style  : none;
+		z-index     : 500;
+		font-size   : 10pt;
+		padding-top : 18px;
+	}
+}
 
