--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -192,11 +192,12 @@ body {
 }
 
 #header {
-	width     : 88%;
-	margin    : auto;
-	padding   : 0;
-	min-width : 970px;
-	max-width : 1536px;
+	width      : 88%;
+	margin     : auto;
+	padding    : 0;
+	box-sizing : border-box;
+	min-width  : 970px;
+	max-width  : 1536px;
 }
 
 .tournheader, .tournheader span, .tournheader span.half {
@@ -303,7 +304,7 @@ img.badgetiny {
 
 #toprow {
 	display        : block;
-	width          : 69%;
+	width          : 70%;
 	min-width      : 580px;
 	float          : right;
 	text-align     : right;
@@ -430,7 +431,6 @@ p.onesignal-customlink-explanation.medium {
 #search {
     position         : relative;
 	background-color : rgba(255, 255, 255, 0.24);
-    width            : 196px;
 	margin-left      : 4px;
 	margin-right     : 4px;
     overflow         : hidden;
@@ -439,11 +439,11 @@ p.onesignal-customlink-explanation.medium {
 
 #search input[type="text"],
 #search input[type="number"] {
-    background : none repeat scroll 0 0 transparent !important;
+    background : none repeat scroll 0 0 transparent;
     border     : 0 none !important;
-    color      : var(--background-white) !important;
-    width      : 76% !important;
-	font-size  : 16px !important;
+    color      : var(--background-white);
+    width      : 76%;
+	font-size  : 16px;
 	display    : inline;
 }
 
@@ -1070,9 +1070,9 @@ input[type="checkbox"].thin {
 
 div.full, div.block, span.full, span.block {
 	box-sizing : border-box;
-	width   : 100%;
-	margin  : 0;
-	padding : 0;
+	width      : 100%;
+	margin     : 0;
+	padding    : 0;
 }
 
 .flexcolumn,
@@ -1336,47 +1336,6 @@ select.fixedtinier {
 	font-size      : 90%;
 	margin		   : 0;
 	padding		   : 2px;
-}
-
-select.fixedsmaller {
-	width        : 110px;
-	font-size    : 100%;
-	margin       : 0;
-	padding      : 0;
-	padding-left : 2px;
-}
-
-select.fixedsmall {
-	width   : 150px;
-	z-index : 401;
-	margin  : 0;
-}
-
-select.fixedmedsmall {
-	width : 175px;
-}
-
-select.fixedmed {
-	width      : 200px;
-	margin-top : 0;
-}
-
-select.fixedmedbig {
-	width      : 220px;
-	margin-top : 0;
-}
-
-select.fixedbiggish {
-	width      : 248px;
-	margin-top : 0;
-}
-
-select.fixedbig {
-	width : 300px;
-}
-
-select.fixedbigger {
-	width : 512px;
 }
 
 input[type="file"].narrow {
@@ -4368,7 +4327,7 @@ form {
 	margin-top     : 2px;
 }
 
-.pagehalf, .pagethird, .pagefull {
+.truehalf, .pagehalf, .pagethird, .pagefull {
 	vertical-align : top;
 }
 
@@ -4406,18 +4365,14 @@ div.pagecolumns:after {
 	display        : inline-block;
 }
 
+.truehalf,
 .pagehalf  {
 	margin     : 0;
-	flex-basis : 54%;
-	min-width  : 49.5%;
+	width      : 49.5%;
 	box-sizing : border-box;
 }
 
 .pagehalf.padded  {
-	margin         : 0;
-	flex-basis     : 47.5%;
-	min-width      : 44%;
-	max-width      : 47.5%;
 	padding-left   : 1%;
 	padding-right  : 1%;
 	padding-bottom : 1%;
@@ -7203,169 +7158,11 @@ span.halffixedflex,
 	line-height  : normal;
 }
 
+@media only screen and (max-width: 1100px) {
 
-@media only screen and (max-width: 877px) {
-
-	h2 {
-		font-size: 2.0em;
+	table: {
+		width: 100%;
 	}
-	h4 {
-		font-size: 1.6em;
-	}
-	h5 {
-		font-size: 1.4em;
-	}
-
-	table {
-		table-layout : fixed;
-		width        : 100%;
-	}
-
-	.splitpage .pagehalf,
-	.pagehalf {
-		width      : 100%;
-		flex-basis : 99.5%;
-		min-width  : 97%;
-		margin-top : 8px;
-	}
-
-	#header {
-		width     : 99%;
-		margin    : auto;
-		padding   : 0;
-		min-width : 0;
-		max-width : 11536px;
-	}
-
-	#logo {
-		display      : inline-block;
-		width        : 22%;
-		margin       : 0;
-		padding      : 0;
-		padding-left : 32px;
-	}
-
-	#logo a {
-		margin         : 0;
-		padding        : 0;
-	}
-
-	#logo a img {
-		display    : inline;
-		max-width  : 100%;
-		max-height : 100%;
-	}
-
-	.tabad_carousel {
-		float            : left;
-		width            : 67%;
-		background-color : var(--neutral--gray);
-		padding-left     : 2%;
-		padding-right    : 2%;
-		margin           : 0;
-		height           : 104px;
-	}
-
-	.tabad_full {
-		width : 94%;
-	}
-
-	#content {
-		display          : block;
-		position         : relative;
-		color            : black;
-		background-color : var(--lightest-cool-gray);
-		margin           : 0;
-		padding          : 0;
-	}
-
-	.main {
-		min-height       : 600px;
-		width            : 69%;
-		padding-bottom   : 42px;
-		background-color : var(--background-white);
-		padding          : 1%;
-		float            : left;
-	}
-
-	.mainfull {
-		float : none;
-		width : 96%;
-	}
-
-	.menu {
-		width : 28%;
-		float : right;
-		padding: .5%;
-	}
-
-	#wrapper {
-		width      : 99%;
-		min-width  : 680px;
-		padding    : 0;
-	}
-
-	#menus {
-		display    : block;
-		width      : 100%;
-		text-align : center;
-		margin     : 0;
-		padding    : 0;
-	}
-
-	#nav {
-		display     : inline-block;
-		float       : none;
-		margin      : auto;
-		list-style  : none;
-		z-index     : 500;
-		font-size   : 10pt;
-		padding-top : 18px;
-	}
-
-	#toprow {
-		display        : block;
-		min-width      : 0;
-		width          : 64%;
-		float          : right;
-		text-align     : right;
-		padding-top    : 4px;
-		padding-bottom : 4px;
-		letter-spacing : .2px;
-		margin         : 0;
-		white-space    : nowrap;
-		overflow       : hidden;
-	}
-
-	#toprow a {
-		display         : inline-block;
-		border-left     : 2px solid rgba(255, 255, 255, 0.14);
-		color           : rgba(255, 255, 255, 0.64);
-		margin-top      : 4px;
-		padding-left    : 4px;
-		padding-right   : 4px;
-		padding-top     : 8px;
-		padding-bottom  : 8px;
-		text-decoration : none;
-		font-size       : 12px;
-		font-weight     : 700;
-	}
-
-	#toprow a.fa {
-		font-size: 16px;
-	}
-
-	#toprow #helpbutton a {
-		font-size   : 1.4em;
-		margin      : 0;
-		padding     : 4px;
-		height      : auto;
-		width       : auto;
-		border-left : none;
-	}
-}
-
-@media only screen and (max-width: 1200px) {
 
 	h2 {
 		font-size: 2.2em;
@@ -7424,11 +7221,12 @@ span.halffixedflex,
 	}
 
 	#header {
+		box-sizing : border-box;
 		width     : 99%;
 		margin    : auto;
 		padding   : 0;
 		min-width : 0;
-		max-width : 11536px;
+		max-width : 1199px;
 	}
 
 	#logo {
@@ -7550,4 +7348,230 @@ span.halffixedflex,
 		padding-top : 18px;
 	}
 }
+
+@media only screen and (max-width: 877px) {
+
+	table: {
+		width : 100%;
+	}
+
+	h2 {
+		font-size: 2.0em;
+	}
+	h4 {
+		font-size: 1.6em;
+	}
+	h5 {
+		font-size: 1.4em;
+	}
+
+	table {
+		width : 100%;
+	}
+
+	.splitpage .truehalf {
+		width : 49.5%;
+	}
+
+	.splitpage .pagehalf,
+	.pagehalf {
+		width      : 100%;
+		flex-basis : 99.5%;
+		min-width  : 97%;
+		margin-top : 8px;
+	}
+
+	#header {
+		box-sizing : border-box;
+		box-sizing : border-box;
+		width      : 98%;
+		margin     : auto;
+		padding    : 0;
+		min-width  : 0;
+		max-width  : 1199px;
+	}
+
+	#search input[type="text"], #search input[type="number"] {
+		font-size : 14px;
+	}
+
+	#logo {
+		display      : inline-block;
+		width        : 30%;
+		margin       : 0;
+		padding      : 0;
+		padding-left : 8px;
+	}
+
+	#logo a {
+		margin         : 0;
+		padding        : 0;
+	}
+
+	#logo a img {
+		display    : inline;
+		max-width  : 100%;
+		max-height : 100%;
+	}
+
+	.tabad_carousel {
+		float            : left;
+		width            : 67%;
+		background-color : var(--neutral--gray);
+		padding-left     : 2%;
+		padding-right    : 2%;
+		margin           : 0;
+		height           : 104px;
+	}
+
+	.tabad_full {
+		width : 94%;
+	}
+
+	#content {
+		display          : block;
+		position         : relative;
+		color            : black;
+		background-color : var(--lightest-cool-gray);
+		margin           : 0;
+		padding          : 0;
+	}
+
+	.main {
+		min-height       : 600px;
+		width            : 69%;
+		padding-bottom   : 42px;
+		background-color : var(--background-white);
+		padding          : 1%;
+		float            : left;
+	}
+
+	.mainfull {
+		float : none;
+		width : 96%;
+	}
+
+	.menu {
+		width : 28%;
+		float : right;
+		padding: .5%;
+	}
+
+	#wrapper {
+		width      : 99%;
+		min-width  : 680px;
+		padding    : 0;
+	}
+
+	#toprow {
+		display        : block;
+		min-width      : 0;
+		width          : 64%;
+		float          : right;
+		text-align     : right;
+		padding-top    : 4px;
+		padding-bottom : 4px;
+		letter-spacing : .2px;
+		margin         : 0;
+		white-space    : nowrap;
+		overflow       : hidden;
+	}
+
+	#toprow a {
+		display         : inline-block;
+		border-left     : 2px solid rgba(255, 255, 255, 0.14);
+		color           : rgba(255, 255, 255, 0.64);
+		margin-top      : 4px;
+		padding-left    : 4px;
+		padding-right   : 4px;
+		padding-top     : 8px;
+		padding-bottom  : 8px;
+		text-decoration : none;
+		font-size       : 12px;
+		font-weight     : 700;
+	}
+
+	#toprow a.fa {
+		font-size: 16px;
+	}
+
+	#toprow #helpbutton a {
+		font-size   : 1.4em;
+		margin      : 0;
+		padding     : 4px;
+		height      : auto;
+		width       : auto;
+		border-left : none;
+	}
+
+	#menus {
+		display    : block;
+		width      : 100%;
+		text-align : center;
+		margin     : 0;
+		padding    : 0;
+		min-width  : 0;
+		height     : 48px;
+	}
+
+	#nav {
+		display         : flex;
+		width           : 98%;
+		align-items     : center;
+		justify-content : stretch;
+		margin          : auto;
+		list-style      : none;
+		z-index         : 500;
+		font-size       : 8pt;
+		padding-top     : 12pt;
+		padding-bottom  : 0;
+	}
+
+	#nav li.top {
+		display: inline-block;
+	}
+
+	#nav li a.top_link {
+		width     : 96px;
+		font-size : 13px;
+	}
+
+	#nav li:hover ul.sub {
+		top   : 30px;
+		left  : 2px;
+		width : 96px;
+	}
+	#nav li a.top_link span.down {
+		padding-top    : 6px;
+		padding-bottom : 6px;
+		width          : 94px;
+	}
+
+	#nav li:hover ul.sub li a {
+		width     : 92px;
+		font-size : 12px;
+	}
+
+	.main.ballotmain {
+		width         : 94%;
+		box-sizing    : border-box;
+		padding-left  : 8px;
+		padding-right : 8px;
+		display       : inline-block;
+	}
+
+	.menu.ballotmenu {
+		width        : 94%;
+		display      : inline-block;
+		padding-left : 0;
+		position     : inherit;
+		float        : none;
+	}
+
+	.shade,
+	.sidenote.logo {
+		display: none;
+	}
+}
+
 
