--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -7225,7 +7225,7 @@ span.halffixedflex,
 		width     : 99%;
 		margin    : auto;
 		padding   : 0;
-		min-width : 0;
+		min-width : 970px;
 		max-width : 1199px;
 	}
 
@@ -7387,7 +7387,7 @@ span.halffixedflex,
 		width      : 98%;
 		margin     : auto;
 		padding    : 0;
-		min-width  : 0;
+		min-width  : 678px;
 		max-width  : 1199px;
 	}
 
