damned if I know why

--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -6812,6 +6812,10 @@ li.select2-results__option {
 	align-items : start;
 }
 
+.tox .tox-editor-container {
+	width: 100%;
+}
+
 span.noflex,
 div.noflex,
 .noflex {
