--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -459,7 +459,6 @@ button::-moz-focus-inner{
     cursor     : pointer !important;
     font-size  : 20px;
     height     : 32px;
-    width      : 16%;
 	margin     : 0;
 	padding    : 0;
 }
@@ -7221,7 +7220,8 @@ span.halffixedflex,
 	}
 
 	table {
-		width        : 100%;
+		width      : 100%;
+		word-break : break-all;
 	}
 
 	#header {
@@ -7370,7 +7370,8 @@ span.halffixedflex,
 	}
 
 	table {
-		width : 100%;
+		width      : 100%;
+		word-break : break-all;
 	}
 
 	.splitpage .truehalf {
@@ -7385,8 +7386,15 @@ span.halffixedflex,
 		margin-top : 8px;
 	}
 
+	#headerarch {
+		display     : flex;
+		flex        : 1 0 auto;
+		width       : 100%;
+		flex-flow   : row nowrap;
+		align-items : center;
+	}
+
 	#header {
-		box-sizing : border-box;
 		box-sizing : border-box;
 		width      : 98%;
 		margin     : auto;
@@ -7401,7 +7409,7 @@ span.halffixedflex,
 
 	#logo {
 		display      : inline-block;
-		width        : 30%;
+		width        : 24%;
 		margin       : 0;
 		padding      : 0;
 		padding-left : 8px;
@@ -7470,7 +7478,7 @@ span.halffixedflex,
 	#toprow {
 		display        : block;
 		min-width      : 0;
-		width          : 64%;
+		width          : 74%;
 		float          : right;
 		text-align     : right;
 		padding-top    : 4px;
@@ -7572,7 +7580,10 @@ span.halffixedflex,
 		float        : none;
 	}
 
-	.shade,
+	.sidenote {
+		width: auto;
+	}
+
 	.sidenote.logo {
 		display: none;
 	}
