--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -191,6 +191,14 @@ body {
 	margin              : 0;
 }
 
+#headerarch {
+	display     : flex;
+	flex        : 1 0 auto;
+	width       : 100%;
+	flex-flow   : row nowrap;
+	align-items : center;
+}
+
 #header {
 	width      : 88%;
 	margin     : auto;
@@ -303,10 +311,9 @@ img.badgetiny {
 }
 
 #toprow {
-	display        : block;
-	width          : 70%;
+	display        : inline-block;
+	width          : 78%;
 	min-width      : 580px;
-	float          : right;
 	text-align     : right;
 	padding-top    : 8px;
 	padding-bottom : 8px;
@@ -7325,7 +7332,7 @@ span.halffixedflex,
 	#toprow {
 		display        : block;
 		min-width      : 512px;
-		width          : 61%;
+		width          : 78%;
 		float          : right;
 		text-align     : right;
 		padding-top    : 4px;
@@ -7479,7 +7486,6 @@ span.halffixedflex,
 		display        : block;
 		min-width      : 0;
 		width          : 74%;
-		float          : right;
 		text-align     : right;
 		padding-top    : 4px;
 		padding-bottom : 4px;
