Formatting changes.  Judge check update.

--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -6209,7 +6209,6 @@ span.status {
 	padding-bottom : 14px !important;
 }
 .padsettingtext {
-	padding-left   : 4px !important;
 	padding-top    : 14px !important;
 	padding-bottom : 12px !important;
 }
@@ -6772,7 +6771,7 @@ li.select2-results__option {
 	padding          : 0;
 	margin           : 0;
 	background-color : var(--background-white);
-	column-gap       : 1%;
+	column-gap       : .5%;
 }
 
 .splitpage .pagehalf {
