--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -1588,10 +1588,13 @@ table {
 	width          : 100%;
 }
 
+table.fixed,
+table.fixedtable,
 table.fixtable {
 	table-layout : fixed;
 	word-break   : break-all;
 	word-wrap    : break-word;
+	width        : 100%;
 }
 
 td  {
