There we go.  Parlis can see.  Quizzes filtered

--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -704,6 +704,11 @@ li {
 	padding-bottom	: 8px;
 }
 
+li.padless {
+	line-height		: 14px;
+	padding-bottom	: 2px;
+}
+
 a {
 	color           : var(--dark-red);
 	text-decoration : none;
@@ -6998,6 +7003,12 @@ span.halffixedflex,
 
 .flexrow label:hover {
 	background-color : var(--lightest-blue);
+}
+
+.flexrow label.grayhover:hover,
+.flexrow.grayhover label:hover,
+.flexrow.grayhover label:hover {
+	background-color: var(--light-gray);
 }
 
 /*HALF*/
