no more worlds hybrid button

--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -6032,6 +6032,16 @@ a.button.padtouchless,
 	font-size      : 16px;
 }
 
+.padhorkids span {
+	padding-left  : 8px !important;
+	padding-right : 8px !important;
+}
+
+.padhoriz {
+	padding-left  : 8px !important;
+	padding-right : 8px !important;
+}
+
 .padvert {
 	padding-top    : 8px !important;
 	padding-bottom : 8px !important;
