Draft one of a lot of things

--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -2660,7 +2660,11 @@ a.buttonwhite {
 	opacity         : 1;
 }
 
-
+.buttonwhite.semibold {
+	font-weight   : 600;
+	padding-right : 16px;
+	padding-left  : 16px;
+}
 
 button.ltbuttonwhite,
 span.ltbuttonwhite,
@@ -3073,7 +3077,7 @@ a.buttonwhite.smaller {
 
 .buttonwhite.invert:hover {
     opacity: .7;
-    border-color: var(--darker-gray) !important;
+    border-color: var(--darker-gray);
 }
 
 .smallbutton:hover,
@@ -3102,6 +3106,10 @@ a.buttonwhite.smaller {
 	border-color     : var(--dark-red);
 	background-color : var(--background-white);
 	color            : var(--dark-red);
+}
+
+.redtext.buttonwhite.invert:hover {
+	border-color     : var(--darker-red);
 }
 
 .redprint,
