Wider agreement on the supps

--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -6873,6 +6873,8 @@ td.flex,
     padding     : 0;
     margin      : 0;
 }
+
+
 .pagehalf .row {
 	width: 100%;
 }
@@ -7006,6 +7008,23 @@ span.halffixedflex,
 
 /* HALF */
 
+.flexfull, .fullflex {
+    display         : flex;
+    flex-flow       : row;
+	align-items     : center;
+    padding         : 0;
+    margin          : 0;
+	width           : 100%;
+	box-sizing      : border-box;
+	justify-content : stretch;
+}
+
+.flexfull span,
+.fullflex span {
+    padding   : 0;
+    margin    : 0;
+}
+
 .flexrow .full {
 	width      : 100%;
 	margin     : 0;
@@ -7036,6 +7055,11 @@ span.halffixedflex,
 .flexkids>label>div,
 .flexkids>span,
 .flexkids>div,
+.flexfull, .fullflex,
+.flexfull>div, .fullflex>div,
+.flexfull>span, .fullflex>span,
+.flexfull>label>div, .fullflex>label>div,
+.flexfull>label>span, .fullflex>label>span,
 .flexrow {
 
 	padding-left  : 4px;
