never let me touch that shit again

--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -446,12 +446,13 @@ p.onesignal-customlink-explanation.medium {
 
 #search input[type="text"],
 #search input[type="number"] {
-    background : none repeat scroll 0 0 transparent;
-    border     : 0 none !important;
-    color      : var(--background-white);
-    width      : 76%;
-	font-size  : 16px;
-	display    : inline;
+    background  : none repeat scroll 0 0 transparent;
+    border      : 0 none !important;
+    color       : var(--background-white);
+    width       : 76%;
+	font-size   : 16px;
+	display     : inline;
+    margin-left : 2px;
 }
 
 button:focus {outline:none;}
